iptables/iptables.conf
# Generated by iptables-save v1.8.7 on Sun Feb 23 17:14:48 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-cbcad838d89a -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-cbcad838d89a -j DOCKER
-A FORWARD -i br-cbcad838d89a ! -o br-cbcad838d89a -j ACCEPT
-A FORWARD -i br-cbcad838d89a -o br-cbcad838d89a -j ACCEPT
-A DOCKER -d 172.22.0.2/32 ! -i br-cbcad838d89a -o br-cbcad838d89a -p tcp -m tcp --dport 28018 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 27017 -j ACCEPT
-A DOCKER -d 172.22.0.2/32 ! -i br-cbcad838d89a -o br-cbcad838d89a -p udp -m udp --dport 28017 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p udp -m udp --dport 27016 -j ACCEPT
-A DOCKER -d 172.22.0.2/32 ! -i br-cbcad838d89a -o br-cbcad838d89a -p tcp -m tcp --dport 28016 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p udp -m udp --dport 27015 -j ACCEPT
-A DOCKER -d 172.22.0.2/32 ! -i br-cbcad838d89a -o br-cbcad838d89a -p udp -m udp --dport 28015 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-cbcad838d89a ! -o br-cbcad838d89a -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-cbcad838d89a -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Sun Feb 23 17:14:48 2025
# Generated by iptables-save v1.8.7 on Sun Feb 23 17:14:48 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.22.0.0/16 ! -o br-cbcad838d89a -j MASQUERADE
-A POSTROUTING -s 172.22.0.2/32 -d 172.22.0.2/32 -p tcp -m tcp --dport 28018 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 27017 -j MASQUERADE
-A POSTROUTING -s 172.22.0.2/32 -d 172.22.0.2/32 -p udp -m udp --dport 28017 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p udp -m udp --dport 27016 -j MASQUERADE
-A POSTROUTING -s 172.22.0.2/32 -d 172.22.0.2/32 -p tcp -m tcp --dport 28016 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p udp -m udp --dport 27015 -j MASQUERADE
-A POSTROUTING -s 172.22.0.2/32 -d 172.22.0.2/32 -p udp -m udp --dport 28015 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-cbcad838d89a -j RETURN
-A DOCKER -d 45.83.104.89/32 ! -i br-cbcad838d89a -p tcp -m tcp --dport 28018 -j DNAT --to-destination 172.22.0.2:28018
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 27017 -j DNAT --to-destination 172.17.0.2:27017
-A DOCKER -d 45.83.104.89/32 ! -i br-cbcad838d89a -p udp -m udp --dport 28017 -j DNAT --to-destination 172.22.0.2:28017
-A DOCKER ! -i docker0 -p udp -m udp --dport 27016 -j DNAT --to-destination 172.17.0.2:27016
-A DOCKER -d 45.83.104.89/32 ! -i br-cbcad838d89a -p tcp -m tcp --dport 28016 -j DNAT --to-destination 172.22.0.2:28016
-A DOCKER ! -i docker0 -p udp -m udp --dport 27015 -j DNAT --to-destination 172.17.0.2:27015
-A DOCKER -d 45.83.104.89/32 ! -i br-cbcad838d89a -p udp -m udp --dport 28015 -j DNAT --to-destination 172.22.0.2:28015
COMMIT
# Completed on Sun Feb 23 17:14:48 2025
